core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/ZVC__Zoom_Event_Registrant__c.object-meta.xml
<CustomObject>
    <label>Zoom Event Registrant</label>
    <nameField>
        <label>Event Registrant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Event Registrants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>