core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>