core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Join_Link__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Join_Link__c</fullName>
    <label>Join Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>