core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>