core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Registration_Status__c</fullName>
    <label>Registration Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>