core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synced from Zoom</fullName>
            </value>
            <value>
                <fullName>Synced to Zoom</fullName>
            </value>
            <value>
                <fullName>To be Synced</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>