core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Zoom_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Event_Id__c</fullName>
    <label>Zoom Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>