core/unpackaged/main/default/objects/ZVC__Zoom_Event_Registrant__c/fields/ZVC__Zoom_Event_Registrant_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Event_Registrant_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Zoom Event Registrant Unique ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>